# cuddle

./: .bazelrc  .env  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.bazel.md  README.md  WORKSPACE.bazel  manage.py  package.json  requirements.txt
.aspect/cli/: config.yaml
.github/workflows/: weekly_tag.yaml
cuddle/: README.md  asgi.py  requirements.txt  settings.py  setup.cfg  urls.py  wsgi.py
cuddle/cuddle/: settings.py  urls.py  wsgi.py
cuddle/feels/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
feels/: models.py  schema.py  serializers.py  urls.py
feels/apis/: spotify.py
feels/migrations/: 0001_initial.py  0002_user_first_name_user_last_name.py  0003_movies_rename_username_user_user_name.py  0004_rename_movies_movie.py  0005_music.py  0006_rename_id_user_user_id.py  0007_rename_user_id_user_id.py  0008_alter_user_user_name.py  0009_alter_movie_genre_alter_movie_title_and_more.py  0010_alter_user_first_name_alter_user_last_name_and_more.py  0011_alter_user_first_name.py  0012_user_gender_alter_movie_genre_alter_movie_title_and_more.py  0013_alter_user_gender.py  0014_alter_user_gender.py  0015_alter_user_gender.py  0016_user_country.py  0017_alter_user_gender.py  0018_remove_user_phone_user_phone_number.py  0019_alter_user_id.py  0020_user_created_at_user_updated_at.py  0021_alter_user_gender.py
feels/tests/: tests.py
feels/views/: movie_views.py  music_views.py
frontend/: .env  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  (+2 more)
tone/: app.py
tools/format/: BUILD.bazel
(+25 files in other folders)
