"Targets in the workspace root"
load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@npm//:defs.bzl", "npm_link_all_packages")

load("@rules_python//python:pip.bzl", "compile_pip_requirements")

alias(
    name = "format",
    actual = "//tools/format",
)

exports_files(
    [
        ".shellcheckrc",
        "pyproject.toml",
    ],
    visibility = ["//visibility:public"],
)
npm_link_all_packages(name = "node_modules")
js_library(
    name = "eslintrc",
    srcs = ["eslint.config.mjs"],
    deps = [
        ":node_modules/@eslint/js",
        ":node_modules/typescript-eslint",
    ],
    visibility = ["//:__subpackages__"],
)


compile_pip_requirements(
    name = "requirements",
    requirements_in = "requirements.txt",
    requirements_txt = "requirements_lock.txt",
)
